[project]
name = "infraprobe"
version = "0.1.0"
description = "Infrastructure probing API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.34",
    "cryptography>=44.0",
    "dnspython>=2.7",
    "sslyze>=6.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infraprobe"]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pyyaml>=6.0.3",
    "ruff>=0.9",
    "ty",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
